# portkiller

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPTIMIZATION_AUDIT.md  README.md  SECURITY.md  UI_HCI_AUDIT.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: embed-icon.cjs  generate-icons.cjs
src/: App.tsx  index.css  main.tsx  preferences.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ContextMenu.tsx  DetailsPanel.tsx  ErrorBoundary.tsx  HistoryPanel.tsx  Icons.tsx  PortGrid.tsx  PortList.tsx  SettingsPanel.tsx  ShortcutsPanel.tsx  Toast.tsx
src/hooks/: useFocusTrap.ts
