[package]
name = "portkiller"
version = "1.0.0"
description = "The fastest way for developers to visualize and terminate processes locking specific ports"
authors = ["PortKiller"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
netstat2 = "0.9"
sysinfo = "0.31"
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
